--- a/Portfolio/index.css
+++ b/Portfolio/index.css
@@ -84,7 +84,7 @@ text-shadow: 0 0 5px rgb(8, 190, 154), 0 0 25px rgb(16, 201, 201), 0 0 50px rgb(
     width: 100%;
     justify-content: space-between;
     height: 100vh;
-    background-image: url('/images/jan-huber-IcFFRhiVfbo-unsplash.jpg');
+    background-image: url('./images/jan-huber-IcFFRhiVfbo-unsplash.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
